# FinalTest

./: CMakeLists.txt  README.md
Executable/: CMakeLists.txt  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
src/: CMakeLists.txt
src/task_1/: CMakeLists.txt  task1.h
src/task_2/: CMakeLists.txt  task2.h
src/task_3/: CMakeLists.txt  task3.h
src/task_4/: CMakeLists.txt  task4.h
src/task_5/: CMakeLists.txt  task5.h
